Fix sidebar overlay visibility

--- a/public/assets/src/sidebar/less/components/_overlay.less
+++ b/public/assets/src/sidebar/less/components/_overlay.less
@@ -7,6 +7,7 @@
 
 .collapsed > .sidebar > .overlay,
 .unpinned-on-server > .sidebar > .overlay {
+  visibility: visible;
   width: 50px;
 }
 
